@@ -2,6 +2,7 @@ pyroscope (0.3.6) hardy; urgency=low
 
   * lstor: Added "-o" option to select output fields
   * rtcontrol: Print XMLRPC statistics when in verbose mode
+  * rtcontrol: Added --view-only and --view=NAME options
   * rtcontrol: Added --custom KEY=VALUE option (set custom_KEY field)
   * rtcontrol: Added field "started" (time of first start)
   * rtcontrol: Added field "leechtime" (completed-started, if applicable)
